Corrected display of sidebar on mobile

--- a/src/styles.less
+++ b/src/styles.less
@@ -38,12 +38,12 @@ body {
 	&.active {
 		aside {
 			right: 0;
-			width: 90%;
+			width: 100%;
 			visibility: visible;
 		}
 	}
 
-	@media (min-width: 425px) {
+	@media (min-width: 450px) {
 		&.active {
 			aside {
 				width: 70%;
@@ -51,7 +51,7 @@ body {
 		}
 	}
 
-	@media (min-width: 490px) {
+	@media (min-width: 510px) {
 		&.active {
 			aside {
 				width: 60%;
@@ -81,12 +81,12 @@ body {
 
 		&.active {
 			main {
-				flex: 0 0 50%;
+				flex: 0 0 55%;
 			}
 
 			aside {
-				flex: 0 0 50%;
-				position: static;
+				flex: 0 0 45%;
+				width: auto;
 			}
 		}
 	}
@@ -99,7 +99,6 @@ body {
 
 			aside {
 				flex: 0 0 45%;
-				position: static;
 			}
 		}
 	}
